--- a/src/views/SelectClient.fxml
+++ b/src/views/SelectClient.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="controllers.SelectClient">
    <children>
       <BorderPane layoutX="10.0" layoutY="10.0">
          <center>
