--- a/src/views/EditClient.fxml
+++ b/src/views/EditClient.fxml
@@ -57,12 +57,12 @@
                   </GridPane>
                   <HBox alignment="CENTER" prefHeight="74.0" prefWidth="480.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Save">
+                        <Button fx:id="buttonSave" mnemonicParsing="false" text="Save">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
                         </Button>
-                        <Button cancelButton="true" mnemonicParsing="false" text="Cancel">
+                        <Button fx:id="buttonCancel" cancelButton="true" mnemonicParsing="false" text="Cancel">
                            <HBox.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
