--- a/src/views/AddSearchDeliveryTickets.fxml
+++ b/src/views/AddSearchDeliveryTickets.fxml
@@ -1,11 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.102" fx:controller="controllers.AddSearchDeliveryTicket">
+<AnchorPane prefHeight="578.0" prefWidth="733.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.AddSearchDeliveryTicket">
    <children>
-      <Button fx:id="buttonNewDeliveryTicket" mnemonicParsing="false" text="New Delivery Ticket" />
+      <BorderPane prefHeight="578.0" prefWidth="733.0">
+         <center>
+            <VBox>
+               <children>
+                  <GridPane alignment="BOTTOM_CENTER" prefHeight="162.0" prefWidth="733.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Label text="Client">
+                           <GridPane.margin>
+                              <Insets left="300.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Label text="Date" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets left="300.0" top="15.0" />
+                           </GridPane.margin>
+                        </Label>
+                        <Button mnemonicParsing="false" text="Search" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets top="30.0" />
+                           </GridPane.margin>
+                        </Button>
+                        <ComboBox fx:id="comboBoxClient" prefHeight="25.0" prefWidth="189.0" GridPane.columnIndex="1" />
+                        <ComboBox fx:id="comboBoxDate" prefHeight="25.0" prefWidth="187.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                           <GridPane.margin>
+                              <Insets top="15.0" />
+                           </GridPane.margin>
+                        </ComboBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="20.0" top="20.0" />
+                     </padding>
+                  </GridPane>
+                  <TableView prefHeight="367.0" prefWidth="733.0">
+                     <columns>
+                        <TableColumn fx:id="tableColumnClient" prefWidth="181.20001220703125" text="Client" />
+                        <TableColumn fx:id="tableColumnCourier" prefWidth="176.79998779296875" text="Courier" />
+                        <TableColumn fx:id="tableColumnOrderDate" prefWidth="193.0" text="Order Date" />
+                        <TableColumn fx:id="tableColumnPackageID" prefWidth="182.0" text="Package ID" />
+                     </columns>
+                  </TableView>
+               </children>
+            </VBox>
+         </center>
+         <bottom>
+            <HBox alignment="TOP_CENTER" prefHeight="74.0" prefWidth="665.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Button fx:id="buttonNewDeliveryTicket" mnemonicParsing="false" text="Add">
+                     <HBox.margin>
+                        <Insets top="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnDeliveryTicketUpdate" mnemonicParsing="false" text="Update">
+                     <HBox.margin>
+                        <Insets left="100.0" top="20.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnDeliveryTicketCancel" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Delete">
+                     <HBox.margin>
+                        <Insets left="100.0" top="20.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+         </bottom>
+         <top>
+            <Label alignment="CENTER" prefHeight="27.0" prefWidth="827.0" text="Select Delivery Ticket" textAlignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+               <padding>
+                  <Insets top="10.0" />
+               </padding>
+            </Label>
+         </top>
+      </BorderPane>
    </children>
 </AnchorPane>
