--- a/src/views/ClientDeliveryReport.fxml
+++ b/src/views/ClientDeliveryReport.fxml
@@ -1,8 +1,169 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
+
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+   <children>
+      <AnchorPane layoutX="10.0" layoutY="10.0">
+         <children>
+            <AnchorPane layoutX="10.0" layoutY="10.0">
+               <children>
+                  <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="577.0" prefWidth="665.0">
+                     <children>
+                        <BorderPane>
+                           <center>
+                              <VBox>
+                                 <children>
+                                    <GridPane alignment="BOTTOM_CENTER">
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
+                                          <Label text="Client">
+                                             <GridPane.margin>
+                                                <Insets left="70.0" />
+                                             </GridPane.margin>
+                                          </Label>
+                                          <Button fx:id="btnPreview" mnemonicParsing="false" text="Preview" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                             <GridPane.margin>
+                                                <Insets left="140.0" />
+                                             </GridPane.margin>
+                                          </Button>
+                                          <ComboBox fx:id="comboBoxClient" prefHeight="25.0" prefWidth="300.0" GridPane.columnIndex="1" />
+                                          <ChoiceBox fx:id="comboBoxStarting" prefHeight="25.0" prefWidth="293.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <Label text="Starting" GridPane.rowIndex="2">
+                                             <GridPane.margin>
+                                                <Insets left="70.0" />
+                                             </GridPane.margin>
+                                          </Label>
+                                          <RadioButton fx:id="radioButtonMonth" mnemonicParsing="false" text="Month" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                             <padding>
+                                                <Insets left="200.0" />
+                                             </padding>
+                                          </RadioButton>
+                                          <RadioButton fx:id="radioButtonWeek" mnemonicParsing="false" text="Week" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                             <GridPane.margin>
+                                                <Insets left="20.0" />
+                                             </GridPane.margin>
+                                          </RadioButton>
+                                          <Label fx:id="labelClientName" text="None" GridPane.rowIndex="3">
+                                             <padding>
+                                                <Insets left="150.0" />
+                                             </padding>
+                                          </Label>
+                                          <Label fx:id="labelDate" text="None" GridPane.rowIndex="4">
+                                             <padding>
+                                                <Insets left="150.0" />
+                                             </padding>
+                                          </Label>
+                                          <Label fx:id="labelNumberofDeliveries" text="None" GridPane.rowIndex="5">
+                                             <padding>
+                                                <Insets left="150.0" />
+                                             </padding>
+                                          </Label>
+                                          <Label fx:id="labelOnTimeDeliveries" text="None" GridPane.rowIndex="6">
+                                             <padding>
+                                                <Insets left="150.0" />
+                                             </padding>
+                                          </Label>
+                                          <Label text="Client Name:" GridPane.rowIndex="3">
+                                             <padding>
+                                                <Insets left="10.0" />
+                                             </padding>
+                                          </Label>
+                                          <Label text="Date:" GridPane.rowIndex="4">
+                                             <GridPane.margin>
+                                                <Insets left="10.0" />
+                                             </GridPane.margin>
+                                          </Label>
+                                          <Label text="Number of Deliveries:" GridPane.rowIndex="5">
+                                             <GridPane.margin>
+                                                <Insets left="10.0" />
+                                             </GridPane.margin>
+                                          </Label>
+                                          <Label text="On-Time Deliveries:" GridPane.rowIndex="6">
+                                             <GridPane.margin>
+                                                <Insets left="10.0" />
+                                             </GridPane.margin>
+                                          </Label>
+                                       </children>
+                                       <padding>
+                                          <Insets bottom="20.0" top="20.0" />
+                                       </padding>
+                                    </GridPane>
+                                    <TableView prefHeight="367.0" prefWidth="665.0">
+                                       <columns>
+                                          <TableColumn fx:id="tableColumnOrderDate" prefWidth="139.60000610351562" text="Order Date" />
+                                          <TableColumn fx:id="tableColumnPickupClient" prefWidth="154.39999389648438" text="Pickup Client" />
+                                          <TableColumn fx:id="tableColumnDeliveryClient" prefWidth="201.60003662109375" text="Delivery Client" />
+                                          <TableColumn fx:id="tableColumnEstimatedDeliveryTime" prefWidth="182.79998779296875" text="Estimated Delivery Time" />
+                                          <TableColumn fx:id="tableColumnActualDeliveryTime" prefWidth="149.20001220703125" text="Actual Delivery Time" />
+                                       </columns>
+                                    </TableView>
+                                 </children>
+                              </VBox>
+                           </center>
+                           <bottom>
+                              <HBox alignment="TOP_CENTER" prefHeight="74.0" prefWidth="665.0" BorderPane.alignment="CENTER">
+                                 <children>
+                                    <Button fx:id="btnCreateReport" mnemonicParsing="false" text="Create Report">
+                                       <HBox.margin>
+                                          <Insets top="20.0" />
+                                       </HBox.margin>
+                                    </Button>
+                                    <ImageView fitHeight="94.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                                    <Button fx:id="btnCancel" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Cancel">
+                                       <HBox.margin>
+                                          <Insets top="20.0" />
+                                       </HBox.margin>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                           </bottom>
+                           <top>
+                              <Label alignment="CENTER" prefHeight="27.0" prefWidth="827.0" text="Client Delivery Report" textAlignment="CENTER">
+                                 <font>
+                                    <Font name="System Bold" size="18.0" />
+                                 </font>
+                                 <padding>
+                                    <Insets top="10.0" />
+                                 </padding>
+                              </Label>
+                           </top>
+                        </BorderPane>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
+   </children>
 </AnchorPane>
-
